--- a/server/package.json
+++ b/server/package.json
@@ -15,8 +15,16 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.13.0",
+    "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "prettier": "^3.2.5"
+    "joi": "^17.13.0",
+    "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21",
+    "prettier": "^3.2.5",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.24.1",
