--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
     "start": "node dist/server.js",
     "start:dev": "nodemon --exec babel-node server.js",
     "prisma": "npx prisma generate",
+    "prisma:studio": "npx prisma studio",
     "prisma:migrate": "npx prisma migrate dev"
   },
   "author": "saike",
